@@ -43,7 +43,7 @@ to crash, so newer versions of those libraries are required.
 
  * QT 4.7
  * PyQt 4.8 `PyQt Website <http://www.riverbankcomputing.co.uk/>`_
- * SQLAlchemy 0.6.5 `SQLAlchemy Website <http://www.sqlalchemy.org>`_
+ * SQLAlchemy 0.7.2 `SQLAlchemy Website <http://www.sqlalchemy.org>`_
  * Elixir 0.7.1 `Elixir Website <http://elixir.ematia.de/>`_
  * sqlalchemy-migrate 0.7.1
  * Jinja2 2.5.5
@@ -64,7 +64,7 @@ extracted::
 The latest and greatest version of the source can be checked out
 from the subversion repository::
 
-  svn co http://guest:guest@repository.conceptive.be/camelot/svn/trunk/
+  git clone git@gitorious.org:camelot/camelot.git
   
 **Adapting PYTHONPATH**
 
